--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
    "name": "livechoice",
    "private": true,
    "workspaces": [
-      "packages/server",
-      "packages/common"
+      "server",
+      "common"
    ],
    "devDependencies": {
       "lerna": "^4.0.0"
