Create client-side application using Angular

--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,4 @@
 {
-  "packages": [
-    "server",
-    "common"
-  ],
-  "version": "0.0.0"
+   "packages": ["server", "common"],
+   "version": "0.0.0"
 }
