Use '@ngneat/until-destroy' to automatically unsubscribe from observables

--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~13.2.0",
     "@nebular/eva-icons": "9.0.1",
     "@nebular/theme": "9.0.1",
+    "@ngneat/until-destroy": "^9.0.0",
     "eva-icons": "^1.1.2",
     "ngx-socket-io": "^4.1.0",
     "rxjs": "~7.5.0",
