Remove dummy chat example and implement logic for joining rooms

--- a/common/tsconfig.json
+++ b/common/tsconfig.json
@@ -12,8 +12,8 @@
       "strictFunctionTypes": true,
       "noImplicitThis": true,
       "rootDir": "src",
-      "outDir": "dist"
-   },
-   "include": ["src/**/*"],
-   "exclude": ["node_modules"]
+      "outDir": "dist",
+      "types": ["node"],
+      "typeRoots": []
+   }
 }
