--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
-    "@nebular/eva-icons": "9.0.1",
+    "@nebular/eva-icons": "^9.0.1",
     "@nebular/theme": "9.0.1",
     "@ngneat/until-destroy": "^9.0.0",
     "eva-icons": "^1.1.2",
