Import and load questions from a JSON file

--- a/common/package.json
+++ b/common/package.json
@@ -13,5 +13,8 @@
    "devDependencies": {
       "typescript": "^4.5.5"
    },
-   "dependencies": {}
+   "dependencies": {
+      "class-transformer": "^0.5.1",
+      "reflect-metadata": "^0.1.13"
+   }
 }
