--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-   "name": "@livechoice/server",
+   "name": "livechoice-server",
    "version": "1.0.0",
    "description": "",
    "author": "",
@@ -21,7 +21,7 @@
       "test:e2e": "jest --config ./test/jest-e2e.json"
    },
    "dependencies": {
-      "@livechoice/common": "1.0.0",
+      "livechoice-common": "1.0.0",
       "@nestjs/common": "^8.0.0",
       "@nestjs/core": "^8.0.0",
       "@nestjs/platform-express": "^8.0.0",
